src/App.css
/* GENERAL CSS RULES */


* {
  margin: 0;
  padding: 0;
}

#root {
  position: relative;
  /* Display and flex-direction ensure background image covers desired area */
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  text-align: center;
}

.open-element {
  display: inherit;
}

.closed-element {
  display: none;
}


/* REUSABLE ELEMENTS */


/* CSS rules for page area between nav and footer */
.page-wrapper {
  margin: 1em 0;
  padding: 0 1em 1em;
  height: 100%;
  background: rgba(254, 254, 254, 0.7);
}

.page-wrapper h2 {
  font-weight: 500;
}

.page-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1em;
  border-bottom: 4px solid #f4f5f7;
  padding: 1.5em 1em;
}

/* CSS rules for unsuccessful RTK query responses e.g. isLoading, isError  */
.rtk-query-msg {
  margin: 1em auto 0;
}

/* CSS rules for styled buttons */
.window-close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  background: none;
}

.window-close-icon {
  font-size: 1.6rem;
}

/* CSS rules for modal forms */
.modal-form-overlay {
  position: fixed;
  top: 0;
  left: 0;
  overflow: scroll;
  height: 100vh;
  width: 100vw;
  background: rgba(0, 8, 20, 0.7);
}

.modal-form-wrapper {
  display: flex;
  flex-direction: column;
  margin: 1em auto 25vh;
  box-shadow: 0 0 4px #222222;
  border-radius: 8px;
  width: 480px;
  max-width: calc(100vw - 2em);
  background: #FEFEFE;
}

.modal-form-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 8px 8px 0 0;
  padding: 0.8em;
  background: #FFD60A;
}

.modal-form-top h3 {
  font-weight: 500;
}

.modal-form-wrapper form {
  display: flex;
  flex-direction: column;
  padding: 1em;
}

.modal-form-wrapper label {
  margin-bottom: 0.5em;
  font-weight: 500;
  text-align: start;
  color: #7F8389;
}

.modal-form-wrapper label>span {
  color: #FF4300;
}

.modal-form-wrapper input,
.modal-form-wrapper textarea {
  transition: 0.6s;
  margin-bottom: 1.1em;
  box-shadow: inset 0 0 2px #222222;
  border: none;
  border-radius: 6px;
}

.modal-form-wrapper input {
  height: 2rem;
  padding-left: 0.6em;
}

.modal-form-wrapper textarea {
  padding: 0.6em;
  font-weight: 400;
}

.modal-form-wrapper input:focus {
  height: 2.2rem;
}

.modal-form-wrapper>form>p {
  margin-bottom: 1em;
  font-size: 0.9rem;
}

.modal-btn-wrapper {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1em;
}

.modal-btn,
.modal-btn-small {
  transition: 0.6s;
  border: none;
  height: 3em;
  font-size: 1rem;
}

.modal-btn {
  border-radius: 50px;
  width: 100%;
  background: #003566;
  color: #FEFEFE;
}

.modal-btn:hover {
  background: #001D3D;
}

.modal-btn-small {
  border-radius: 10px;
  width: calc(50% - 0.5em);
  background: #FFD60A;
}

.modal-btn-small:hover {
  background: #FFC300;
}

.rtk-query-form-msg {
  margin-top: 1em;
  color: #FF4300;
}


/* COMMON COMPONENTS */


/* || Sidebar */

@media only screen and (min-width: 560px) {
  .sidebar {
    display: none;
  }
}

@media only screen and (max-width: 559px) {
  .sidebar {
    position: absolute;
    left: -50vw;
    /* Height of sidebar is 100% minus combined height of header, nav, and footer */
    height: calc(100% - 208px);
    width: 50vw;
    background: #000814;
    text-align: start;
    transition: 0.7s;
    font-size: 1.2rem;
    color: #FEFEFE;
  }

  .visible-sidebar {
    left: 0;
  }

  .sidebar ul {
    position: sticky;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 45vh;
  }

  .sidebar ul li {
    align-self: center;
  }
}


/* || Header */

@media only screen and (min-width: 480px) {
  header ul {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
  }
}

@media only screen and (max-width: 479px) {
  header ul {
    display: flex;
    flex-direction: column;
  }

  header ul li {
    padding: 1% 0;
  }
}

header ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #FEFEFE;
}

.header-icon {
  color: #FFC300;
}


/* || Nav */

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 1em;
}

nav h1 {
  font-weight: 600;
}

.nav-icon {
  cursor: pointer;
  font-size: 3rem;
}

@media only screen and (min-width: 560px) {
  nav ul {
    display: flex;
    justify-content: space-around;
    min-width: 50%;
  }

  .nav-icon {
    display: none;
  }
}

@media only screen and (max-width: 559px) {
  nav ul {
    display: none;
  }
}


/* || NavMenu */

.nav-menu li a.active {
  text-decoration: underline;
}


/* PAGES */


/* || HOME */

/* For placeholder elements on pages with no current content. */
.temp-wrapper {
  margin: 8vw auto;
  box-shadow: 0 0 4px #222222;
  border-radius: 4px;
  width: 360px;
  max-width: 66vw;
  padding: 2em;
  background: #FEFEFE;
}

.temp-wrapper>*:not(:last-child) {
  margin-bottom: 16px;
}

.temp-wrapper span {
  text-decoration: underline;
  text-underline-offset: 2px;
}


/* || ADMIN */

/* || Login */

.login-wrapper {
  margin: 8vw auto;
  box-shadow: 0 0 4px #222222;
  border-radius: 4px;
  width: 360px;
  max-width: 66vw;
  padding: 2em;
  background: #FEFEFE;
}

.login-wrapper h2,
.login-wrapper p,
.login-form input,
.login-form p {
  margin-bottom: 32px;
}

.login-wrapper h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
}

.login-form {
  display: flex;
  flex-direction: column;
}

.login-form input {
  transition: 0.6s;
  box-shadow: inset 0 0 2px #222222;
  border: none;
  border-radius: 4px;
  height: 3em;
  padding-left: 1em;
}

.login-form input:focus {
  height: 3.3em;
}

.login-form p {
  font-size: 0.9em;
  color: #FF4300;
}

.login-form button {
  transition: 0.6s;
  border: none;
  border-radius: 50px;
  height: 3em;
  background: #FFD60A;
  font-size: 1rem;
}

.login-form button:hover {
  background: #FFC300;
}


/* || Dashboard */

.dashboard-components {
  display: flex;
  flex-wrap: wrap;
}

.dash-comp-wrapper {
  flex-grow: 1;
  margin: 1em;
  box-shadow: 0 0 4px #222222;
  border-radius: 8px;
  height: fit-content;
  max-width: 480px;
  background: #FEFEFE;
}

.dash-comp-wrapper h3 {
  border-radius: 8px 8px 0 0;
  padding: 1.5em;
  background: #FFD60A;
  font-weight: 500;
}

.dash-comp-content {
  margin: 1.5em 1em 0.5em;
  overflow-wrap: break-word;
}

.dashboard-btn {
  transition: 0.6s;
  margin: 1em 0;
  border: none;
  border-radius: 50px;
  height: 3em;
  width: calc(100% - 2em);
  background: #003566;
  font-size: 1rem;
  color: #FEFEFE;
}

.dashboard-btn:hover {
  background: #001D3D;
}


/* || UserProfile */

.user-profile-btn {
  border: 1px solid #000814;
  border-radius: 50px;
  height: 3em;
  width: 3em;
  background: #FEFEFE;
}

.user-profile-btn-clicked {
  box-shadow: inset 0 0 4px #222222;
}

.user-profile-icon {
  font-size: 1.2rem;
}

.open-profile-wrapper {
  position: absolute;
  top: 220px;
  right: 32px;
  display: flex;
  flex-direction: column;
  box-shadow: 0 0 40px #222222;
  border-radius: 14px;
  max-width: calc(100% - 96px);
  min-width: 140px;
  padding: 1em;
  background: #FEFEFE;
}

@media only screen and (min-width: 480px) {
  .open-profile-wrapper {
    max-width: 384px;
  }
}

.open-profile-wrapper p {
  margin: 0.4em auto 1em;
  max-width: 100%;
  text-align: start;
  word-wrap: break-word;
}

.open-profile-btn {
  align-self: flex-end;
}


/* || Logout */

.logout-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.6s;
  border: none;
  border-radius: 8px;
  padding: 0.6em 0.8em;
  background: #FFD60A;
}

.logout-btn:hover {
  background: #FFC300;
}


/* || BusinessInfoDisplay */

.business-info-table>*:not(:last-child) {
  margin-bottom: 1em;
}

.business-info-row {
  display: grid;
  grid-template-columns: 10% 90%;
  align-items: center;
}

.business-info-icon {
  grid-column: 1;
  /* Ensures icon for address is centered between two cells */
  grid-row: span 2;
  justify-self: center;
  font-size: 1.1rem;
}

.business-info-row>p {
  grid-column: 2;
  margin-left: 5%;
  text-align: start;
}


/* || JobsBoard */

.dash-nav-btn {
  transition: 0.6s;
  border: none;
  border-radius: 50px;
  padding: 0.6em 0.8em;
  background: #003566;
  font-size: 1rem;
  color: #FEFEFE;
}

.dash-nav-btn:hover {
  background: #001D3D;
}

.jobs-board-el {
  border: 2px solid #000814;
  background: #FEFEFE;
}

/* || ServicesBoard */

.services-board-el {
  border: 2px solid #000814;
  background: #FEFEFE;
}

